objects/Load_Status__c.object
<CustomObject>
    <description>Shows load status for different data sources and is mainly used to identify last loaded fiscal periods.</description>
    <fields>
        <fullName>Backlog_Updated_Date__c</fullName>
        <description>filled via the integration when backlog and demand are loaded</description>
        <label>Backlog_Updated_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <inlineHelpText>Shows last loaded date for given data source. Only populated for data sources on daily level.</inlineHelpText>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Month__c</fullName>
        <inlineHelpText>Shows last loaded fiscal month for given data source.</inlineHelpText>
        <label>Current Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Quarter__c</fullName>
        <inlineHelpText>Shows last loaded fiscal quarter for given data source.</inlineHelpText>
        <label>Current Fiscal Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Week__c</fullName>
        <inlineHelpText>Shows last loaded fiscal week for given data source. Only populated for data sources on daily/weekly level.</inlineHelpText>
        <label>Current Fiscal Week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Working_Day_in_Quarter__c</fullName>
        <formula>Case(Current_Fiscal_Month__c,
1, Fiscal_Working_Days_until_today__c,
2,(Fiscal_Working_Days_until_today__c + 20),
3,(Fiscal_Working_Days_until_today__c + 45),
4, Fiscal_Working_Days_until_today__c,
5,(Fiscal_Working_Days_until_today__c + 20),
6,(Fiscal_Working_Days_until_today__c + 45),
7, Fiscal_Working_Days_until_today__c,
8,(Fiscal_Working_Days_until_today__c + 20),
9,(Fiscal_Working_Days_until_today__c + 45),
10, Fiscal_Working_Days_until_today__c,
11,(Fiscal_Working_Days_until_today__c + 20),
(Fiscal_Working_Days_until_today__c + 45))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Fiscal Working Day in Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Working_Day_in_Year__c</fullName>
        <formula>Case(Current_Fiscal_Month__c, 
1, Fiscal_Working_Days_until_today__c, 
2,(Fiscal_Working_Days_until_today__c + 20), 
3,(Fiscal_Working_Days_until_today__c + 45), 
4,(Fiscal_Working_Days_until_today__c + 65), 
5,(Fiscal_Working_Days_until_today__c + 85), 
6,(Fiscal_Working_Days_until_today__c + 110), 
7,(Fiscal_Working_Days_until_today__c + 130), 
8,(Fiscal_Working_Days_until_today__c + 150), 
9,(Fiscal_Working_Days_until_today__c + 175), 
10,(Fiscal_Working_Days_until_today__c + 195), 
11,(Fiscal_Working_Days_until_today__c + 215), 
(Fiscal_Working_Days_until_today__c + 235))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Fiscal Working Day in Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Year__c</fullName>
        <inlineHelpText>Shows last loaded fiscal year for given data source.</inlineHelpText>
        <label>Current Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source_Description__c</fullName>
        <description>A human readable text description of what kind of data is contained in the data source named for each Load Status Row.</description>
        <inlineHelpText>i.e. the BBB_Day_Direct_Bill_Book_Bklg_Cust_PN__c object contains Bookings/Billings Direct Daily  data.</inlineHelpText>
        <label>Data Source Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demand_Updated_Date__c</fullName>
        <description>filled via integration when demand and backlog are loaded</description>
        <label>Demand_Updated_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Days_until_today__c</fullName>
        <description>Fiscal Days until today</description>
        <label>Fiscal Days until today</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Working_Days_until_today__c</fullName>
        <description>Fiscal Working Days until today</description>
        <label>Fiscal Working Days until today</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Current_Date__c</fullName>
        <inlineHelpText>Shows date of previous snapshot cycle in case periodical snapshots are generated</inlineHelpText>
        <label>Previous Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Snapshot_Date__c</fullName>
        <inlineHelpText>Snapshot date of previous snapshot cycle</inlineHelpText>
        <label>Previous Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <description>This field is used to trigger a Chatter message when a data load of the monthly or daily objects has finished. Updated by a workflow rule and field update.</description>
        <label>Status Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Days__c</fullName>
        <description>Total Fiscal Month Days</description>
        <label>Total Fiscal Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Working_Days__c</fullName>
        <description>Total Fiscal Working Days</description>
        <label>Total Fiscal Working Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Load Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_Source_Description__c</columns>
        <columns>Current_Date__c</columns>
        <columns>Current_Fiscal_Month__c</columns>
        <columns>Current_Fiscal_Year__c</columns>
        <columns>Backlog_Updated_Date__c</columns>
        <columns>Demand_Updated_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Current_Fiscal_Working_Day_in_Year__c</columns>
        <columns>Fiscal_Working_Days_until_today__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Data Source</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Load Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>